--- a/pages/shows.html
+++ b/pages/shows.html
@@ -19,16 +19,28 @@
         </div>
         <div class="header__image">
             <p class="header__image-album">Beautiful Beasts Album</p>
-            <h1 class="header__image-title">Stripes of Yellow x <br /> For The Stings</h1>
-            <div class="music">
-                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535872399&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                    <!-- <a href="https://soundcloud.com/momomoyouth" title="MØ" target="_blank" style="color: #cccccc; text-decoration: none;">MØ</a> -->
+                <h1 class="header__image-title">Stripes of Yellow x <br /> For The Stings</h1>
+                <div class="music">
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535872399&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                        <!-- <a href="https://soundcloud.com/momomoyouth" title="MØ" target="_blank" style="color: #cccccc; text-decoration: none;">MØ</a> -->
+                </div>
             </div>
-        </div>
     </header>
 
     <main>
+        <h1 class="shows__heading">Shows</h1>
+        <article class="shows-block shows-title--tablet">
+            <div class="shows-info">
+                <p class="shows__title shows__title--modified">DATE</p>
+            </div>
+            <div class="shows-info">
+                <p class="shows__title">VENUE</p>
+            </div>
+            <div class="shows-info">
+                <p class="shows__title">LOCATION</p>
+            </div>
+        </article>
         <ul class="shows-list"></ul>
     </main>
 </body>
